--- a/planets.html
+++ b/planets.html
@@ -86,9 +86,9 @@ padding: 20px;
 		</audio>
 		
 		<header>
-			<a href="home.html" class="logo"><img src="image/logo.png" alt="">Kidtopia</a>
+			<a href="index.html" class="logo"><img src="image/logo.png" alt="">Kidtopia</a>
 				<ul class="navlist">
-					<li class="lilink"><a href="home.html" class="nav-item">Home</a></li>
+					<li class="lilink"><a href="index.html" class="nav-item">Home</a></li>
 					<li class="lilink"><a href="planets.html" class="nav-item active">Planets</a></li>
 					<li class="lilink"><a href="news.html" class="nav-item">News</a></li>
 					<li class="lilink"><a href="quiz.html" class="nav-item">Quiz</a></li>
