--- a/quiz.html
+++ b/quiz.html
@@ -269,9 +269,9 @@ margin-left: 50px;
 			</audio>
 			
 		<header>
-			<a href="home.html" class="logo"><img src="image/logo.png" alt="">Kidtopia</a>
+			<a href="index.html" class="logo"><img src="image/logo.png" alt="">Kidtopia</a>
 				<ul class="navlist">
-					<li class="lilink"><a href="home.html" class="nav-item">Home</a></li>
+					<li class="lilink"><a href="index.html" class="nav-item">Home</a></li>
 					<li class="lilink"><a href="planets.html" class="nav-item">Planets</a></li>
 					<li class="lilink"><a href="news.html" class="nav-item">News</a></li>
 					<li class="lilink"><a href="quiz.html" class="nav-item active">Quiz</a></li>
